--- a/requirements.txt
+++ b/requirements.txt
@@ -1,192 +1,11 @@
-about-time==4.2.1
-absl-py==2.3.0
-alive-progress==3.2.0
-altair @ file:///home/conda/feedstock_root/build_artifacts/altair-split_1734244716962/work
-altex==0.2.0
-annotated-types==0.7.0
-anyio==4.12.0
-ase @ file:///home/conda/feedstock_root/build_artifacts/ase_1717201223653/work
-asn1crypto==1.5.1
-astunparse==1.6.3
-attrs==25.3.0
-autograd==1.8.0
-beautifulsoup4==4.13.4
-blinker==1.9.0
-boto3==1.42.21
-botocore==1.42.21
-Brotli @ file:///D:/bld/brotli-split_1666788538925/work
-cachetools==5.5.2
-certifi==2025.4.26
-cffi @ file:///D:/bld/cffi_1725560792189/work
-charset-normalizer==3.4.2
-click==8.1.8
-cloudpickle==3.1.1
-cma==3.2.2
-colorama==0.4.6
-contourpy==1.3.0
-cryptography @ file:///C:/b/abs_ae5lrkywtg/croot/cryptography_1740577842775/work
-cvxopt==1.3.2
-cycler==0.12.1
-Deprecated==1.2.18
-dill==0.4.0
-distro==1.9.0
-dnspython==2.7.0
-entrypoints==0.4
-exceptiongroup==1.3.1
-Faker==37.3.0
-favicon==0.7.0
-filelock==3.19.1
-Flask @ file:///home/conda/feedstock_root/build_artifacts/flask_1755674618058/work
-fonttools==4.58.2
-future==1.0.0
-gast==0.4.0
-gitdb==4.0.12
-GitPython @ file:///home/conda/feedstock_root/build_artifacts/gitpython_1753444155689/work
-google-pasta==0.2.0
-googleapis-common-protos==1.70.0
-grapheme==0.6.0
-graphviz==0.20.1
-grpcio==1.72.1
-h11==0.16.0
-h2 @ file:///home/conda/feedstock_root/build_artifacts/h2_1738578511449/work
-h5py==3.14.0
-hpack @ file:///home/conda/feedstock_root/build_artifacts/hpack_1737618293087/work
-htbuilder==0.9.0
-httpcore==1.0.9
-httpx==0.28.1
-hyperframe @ file:///home/conda/feedstock_root/build_artifacts/hyperframe_1737618333194/work
-idna==3.10
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-itsdangerous @ file:///home/conda/feedstock_root/build_artifacts/itsdangerous_1733308265247/work
-Jinja2==3.1.6
-jiter==0.12.0
-jmespath==1.0.1
-joblib==1.5.1
-jsonschema @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_jsonschema_1755595646/work
-jsonschema-specifications @ file:///tmp/tmpuvkyqc9y/src
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.7
-latexcodec==3.0.0
-libclang==18.1.1
-llvmlite==0.43.0
-lxml==5.4.0
-Markdown==3.9
-markdownlit==0.0.7
-MarkupSafe==3.0.2
-matminer @ file:///home/conda/feedstock_root/build_artifacts/matminer_1734806622982/work
-matplotlib @ file:///D:/bld/matplotlib-suite_1695076840246/work
-monty @ file:///home/conda/feedstock_root/build_artifacts/monty_1733965090958/work
-more-itertools==10.7.0
-mpmath==1.3.0
-munkres==1.1.4
-narwhals==1.41.1
-networkx==3.2.1
-numba==0.60.0
-numpy @ file:///D:/bld/numpy_1691056377689/work
-oauthlib==3.2.2
-openai==2.14.0
-opt_einsum==3.4.0
-packaging==24.2
-palettable==3.3.3
-pandas @ file:///D:/bld/pandas_1680107775856/work
-patsy @ file:///home/conda/feedstock_root/build_artifacts/patsy_1733792384640/work
-Pillow==9.5.0
-platformdirs==4.4.0
-plotly==6.1.2
-ply @ file:///home/conda/feedstock_root/build_artifacts/ply_1733239724146/work
-prettytable==3.8.0
-prometheus_client==0.23.1
-proto-plus==1.26.1
-protobuf @ file:///D:/bld/protobuf_1751668327454/work/bazel-bin/python/dist/protobuf-6.31.1-cp39-abi3-win_amd64.whl#sha256=af8344af7bd7c70bb451ad72964d68fa11186d94ebd7ed521666e30bcf4dc001
-pyarrow==20.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pybtex==0.24.0
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_pycparser_1733195786/work
-pydantic==2.12.5
-pydantic_core==2.41.5
-pydeck==0.9.1
-PyJWT==2.10.1
-pymatgen @ file:///D:/bld/pymatgen_1717202974034/work
-pymdown-extensions==10.20
-pymongo==4.13.0
-pyOpenSSL @ file:///C:/b/abs_6cmmt1gx_z/croot/pyopenssl_1741343840223/work
-pyparsing==3.2.3
-PyQt5==5.15.11
-PyQt5_sip @ file:///D:/bld/pyqt-split_1749224089790/work/pyqt_sip
-PySocks @ file:///D:/bld/pysocks_1733217287171/work
-python-dateutil==2.9.0.post0
-pytz==2025.2
-PyYAML==6.0
-referencing==0.36.2
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1755614211359/work
-requests-oauthlib==2.0.0
-rpds-py==0.25.1
-rsa==4.9.1
-ruamel.yaml @ file:///D:/bld/ruamel.yaml_1755625021702/work
-ruamel.yaml.clib==0.2.12
-s3transfer==0.16.0
-SciencePlots @ file:///home/conda/feedstock_root/build_artifacts/scienceplots_1736746873830/work
-scikit-learn @ file:///D:/bld/scikit-learn_1736496793625/work/dist/scikit_learn-1.6.1-cp39-cp39-win_amd64.whl#sha256=bb1e08460161bd7b8163df245d711be5c4d65ff892d330db2e71295806b53f85
-scipy==1.13.1
-seaborn @ file:///home/conda/feedstock_root/build_artifacts/seaborn-split_1733730015268/work
-shap @ file:///D:/bld/shap_1690357973274/work
-sip @ file:///D:/bld/sip_1745411199918/work
-six==1.17.0
-sko==0.5.7
-slicer==0.0.7
-smmap==5.0.2
-sniffio @ file:///home/conda/feedstock_root/build_artifacts/sniffio_1733244044561/work
-snowflake-connector-python==4.1.1
-snowflake-snowpark-python==1.44.0
-sortedcontainers==2.4.0
-soupsieve==2.7
-spglib==2.6.0
-st-annotated-text==4.0.2
-st-theme==1.2.3
-statsmodels @ file:///D:/bld/statsmodels_1751917455572/work
-streamlit @ file:///home/conda/feedstock_root/build_artifacts/streamlit_1755128470103/work
-streamlit-avatar==0.1.3
-streamlit-camera-input-live==0.2.0
-streamlit-card==1.0.2
-streamlit-embedcode==0.1.2
+streamlit==1.50.0
 streamlit-extras==0.7.8
-streamlit-image-coordinates==0.2.2
-streamlit-keyup==0.3.0
-streamlit-notify==0.3.1
 streamlit-option-menu==0.4.0
-streamlit-shap==1.0.2
-streamlit-toggle-switch==1.0.2
-streamlit-vertical-slider==2.5.5
-streamlit_faker==0.0.4
-sympy==1.14.0
-tabulate==0.9.0
-tenacity==9.1.2
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==3.1.0
-threadpoolctl==3.6.0
-toml==0.10.2
-tomli @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_tomli_1753796677/work
-tomlkit==0.13.3
-toolz==1.0.0
-tornado==6.5.1
-tqdm==4.67.1
-typing-inspection==0.4.2
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_typing_extensions_1751643513/work
-tzdata==2025.2
-tzlocal==5.3.1
-uncertainties==3.2.3
-unicodedata2 @ file:///D:/bld/unicodedata2_1736692548847/work
-urllib3 @ file:///C:/b/abs_eeswtzv5iq/croot/urllib3_1718978558630/work
-validators==0.35.0
-watchdog==6.0.0
-wcwidth==0.2.13
-Werkzeug==3.1.3
-win_inet_pton @ file:///D:/bld/win_inet_pton_1733130564612/work
-wrapt==1.17.2
-xgboost==1.7.4
-zipp==3.22.0
-zstandard==0.23.0
+streamlit-card==1.0.2
+prettytable==3.8.0
+pandas==2.3.3
+requests==2.32.5
+openai==2.14.0
+joblib==1.5.1
+numpy==1.24
+scikit-learn==1.2.2
